# AdvCpp-2020.1

./: CMakeLists.txt  README.md  hw1  hw2
examples/hw1/: CMakeLists.txt
examples/hw1/include/: SimpleDialog.hpp  simple_dialog.hpp
examples/hw1/src/: SimpleDialog.cpp  main.cpp  simple_dialog.cpp
examples/hw2/: CMakeLists.txt
examples/hw2/include/: LoggerInit.hpp
examples/hw2/src/: LoggerInit.cpp  main.cpp
examples/hw3/: CMakeLists.txt
examples/hw3/include/: SimpleDialogTcp.hpp
examples/hw3/src/: SimpleDialogTcp.cpp  main.cpp
examples/hw4/: CMakeLists.txt
examples/hw4/src/: main.cpp
examples/hw5/: CMakeLists.txt
examples/hw5/src/: main.cpp
examples/hw6/: CMakeLists.txt
examples/hw6/src/: main.cpp
hw2/linters/: run.sh
hw2/log_lib/include/: Logger.hpp  StderrLogger.hpp  StdoutLogger.hpp
hw2/log_lib/src/: BaseLogger.cpp  Logger.cpp  StderrLogger.cpp
hw2/logger/include/: logger_init.hpp
hw2/logger/src/: logger_init.cpp  main.cpp
include/: process.hpp  simple_dialog.hpp
lib/include/: process.hpp
lib/src/: process.cpp
libraries/epoll_server/: CMakeLists.txt
libraries/epoll_server/include/: Connection.hpp  EpollServerException.hpp  Server.hpp
libraries/epoll_server/src/: Connection.cpp  EpollServerException.cpp  Server.cpp
libraries/file_descriptor/: CMakeLists.txt
libraries/file_descriptor/include/: Descriptor.hpp  FileDescriptorException.hpp  Pipe.hpp  descriptor.hpp  pipe.hpp
libraries/file_descriptor/src/: Descriptor.cpp  FileDescriptorException.cpp  Pipe.cpp  descriptor.cpp  file_descriptor_exception.cpp  pipe.cpp
libraries/http_framework/: CMakeLists.txt
libraries/http_framework/include/: Connection.hpp  Coroutine.hpp  HttpServerException.hpp  Server.hpp  http_protocol.hpp
libraries/http_framework/src/: Connection.cpp  Coroutine.cpp  HttpServerException.cpp  Server.cpp
libraries/logger/: CMakeLists.txt
libraries/logger/include/: BaseLogger.hpp  Logger.hpp  LoggerException.hpp
libraries/logger/src/: BaseLogger.cpp  FileLogger.cpp  Logger.cpp  LoggerException.cpp  StderrLogger.cpp  StdoutLogger.cpp
libraries/process/: CMakeLists.txt
libraries/process/include/: Process.hpp  ProcessException.hpp  process.hpp
libraries/process/src/: Process.cpp  ProcessException.cpp  process.cpp  process_exception.cpp
libraries/shmem/: CMakeLists.txt
libraries/shmem/containers/: shmap.hpp
libraries/shmem/include/: allocator.hpp  linear_allocator.hpp  semaphore.hpp  shared_memory.hpp  shmem_exception.hpp
libraries/shmem/src/: semaphore.cpp  shared_memory.cpp  shmem_exception.cpp
libraries/tcp/: CMakeLists.txt
libraries/tcp/include/: Connection.hpp  Server.hpp  TcpException.hpp
libraries/tcp/src/: Connection.cpp  Server.cpp  TcpException.cpp
linters/: run.sh
log_lib/include/: BaseLogger.hpp  FileLogger.hpp  Logger.hpp
log_lib/src/: BaseLogger.cpp  FileLogger.cpp  Logger.cpp  StderrLogger.cpp  StdoutLogger.cpp
logger/src/: logger_init.cpp
process_lib/include/: descriptor.hpp  pipe.hpp  process.hpp
process_lib/src/: descriptor.cpp  pipe.cpp  process.cpp
project/include/: simple_dialog.hpp
project/src/: main.cpp  simple_dialog.cpp
src/: main.cpp  process.cpp  simple_dialog.cpp
tcp/include/: connection.hpp  server.hpp
tcp/src/: connection.cpp  server.cpp
tcp_test/: server_test.cpp
